--- a/package.json
+++ b/package.json
@@ -11,27 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/animations": "^9.1.5",
+    "@angular/cdk": "^9.2.2",
+    "@angular/common": "^9.1.5",
+    "@angular/compiler": "^9.1.5",
+    "@angular/core": "^9.1.5",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "^9.1.5",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^9.2.2",
+    "@angular/platform-browser": "^9.1.5",
+    "@angular/platform-browser-dynamic": "^9.1.5",
+    "@angular/router": "^9.1.5",
     "bootstrap": "^3.4.1",
-    "rxjs": "~6.4.0",
+    "core-js": "^3.6.5",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.22",
-    "@angular/cli": "~8.3.22",
+    "@angular/cli": "^9.1.4",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
