--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^9.1.9",
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/router": "^9.1.9",
+    "@ngrx/store": "^9.1.2",
     "bootstrap": "^3.4.1",
     "core-js": "^3.6.5",
     "rxjs": "^6.5.5",
