--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/router": "^9.1.9",
     "@ngrx/effects": "^9.2.0",
+    "@ngrx/router-store": "^9.2.0",
     "@ngrx/store": "^9.1.2",
     "bootstrap": "^3.4.1",
     "core-js": "^3.6.5",
@@ -37,6 +38,7 @@
     "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "^9.1.9",
     "@angular/language-service": "^8.2.14",
+    "@ngrx/store-devtools": "^9.2.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.13.9",
