--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run Cookbook:serve-ssr",
+    "serve:ssr": "node dist/Cookbook/server/main.js",
+    "build:ssr": "ng build --prod && ng run Cookbook:server:production",
+    "prerender": "ng run Cookbook:prerender"
   },
   "private": true,
   "dependencies": {
@@ -22,12 +26,15 @@
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.9",
     "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/platform-server": "^9.1.9",
     "@angular/router": "^9.1.9",
     "@ngrx/effects": "^9.2.0",
     "@ngrx/router-store": "^9.2.0",
     "@ngrx/store": "^9.1.2",
+    "@nguniversal/express-engine": "^9.1.1",
     "bootstrap": "^3.4.1",
     "core-js": "^3.6.5",
+    "express": "^4.15.2",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.13.0",
@@ -39,6 +46,8 @@
     "@angular/compiler-cli": "^9.1.9",
     "@angular/language-service": "^8.2.14",
     "@ngrx/store-devtools": "^9.2.0",
+    "@nguniversal/builders": "^9.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.13.9",
