Multi language support for German and English

--- a/angular.json
+++ b/angular.json
@@ -149,9 +149,7 @@
           "options": {
             "browserTarget": "Cookbook:build:production",
             "serverTarget": "Cookbook:server:production",
-            "routes": [
-              "/"
-            ]
+            "routes": ["/"]
           },
           "configurations": {
             "production": {}
