--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dev:ssr": "ng run Cookbook:serve-ssr",
     "serve:ssr": "node dist/Cookbook/server/main.js",
     "build:ssr": "ng build --prod && ng run Cookbook:server:production",
-    "prerender": "ng run Cookbook:prerender"
+    "prerender": "ng run Cookbook:prerender",
+    "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
+    "i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/{en,da,de,fi,nb,nl,sv}.json --clean --format json",
+    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json --clean --sort --format namespaced-json --marker _"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +35,8 @@
     "@ngrx/router-store": "^9.2.0",
     "@ngrx/store": "^9.1.2",
     "@nguniversal/express-engine": "^9.1.1",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^3.4.1",
     "core-js": "^3.6.5",
     "express": "^4.15.2",
@@ -45,6 +50,7 @@
     "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "^9.1.9",
     "@angular/language-service": "^8.2.14",
+    "@biesbjerg/ngx-translate-extract": "^7.0.0",
     "@ngrx/store-devtools": "^9.2.0",
     "@nguniversal/builders": "^9.1.1",
     "@types/express": "^4.17.0",
